--- a/src/components/TableDate/TableDate.css
+++ b/src/components/TableDate/TableDate.css
@@ -1,13 +1,14 @@
 .row{
     border-radius: 7px;
     margin-bottom: 2px;
-    height:50px ;
+    height:90px ;
     display: flex;
     background-color: rgb(127, 151, 231);
     border: solid rgb(189, 172, 206) 1px;
     justify-content: space-between;
 }
 .rowDate{
+    overflow: hidden;
     padding-top:10px ;
     flex-basis: 140px;
     text-align: center;
@@ -15,4 +16,13 @@
 }
 .addTable{
     margin-left: auto;
+}
+.inputName{
+
+}
+.inputCategory{
+
+}
+.inputData{
+    
 }
